<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="@dimen/unit1"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/unit2"
    card_view:cardElevation="@dimen/unit3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/restaurant_image"/>

        <TextView
            android:id="@+id/restaurant_title"
            style="@style/AppTheme.Headline.Inverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="@dimen/unit1"
            tools:text="@string/unknown"
            android:textSize="@dimen/unit3"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/restaurant_ratings"
            style="@style/AppTheme.Headline.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd = "true"
            android:padding="@dimen/unit1"
            android:text="@string/question_mark"
            android:textSize="@dimen/unit2"
            android:background="@color/black"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>